fix(padding): inputs had way too much right padding

--- a/source/styles/mixins/forms.css
+++ b/source/styles/mixins/forms.css
@@ -20,6 +20,7 @@
   @media (min-width: 420px) {
     padding-top: 2vw;
     padding-bottom: 2vw;
+    padding-right: 2vw;
   }
 
   @media (min-width: 650px) {
@@ -27,12 +28,14 @@
     padding-top: 1vw;
     padding-bottom: 1vw;
     padding-left: 5vw;
+    padding-right: 1vw;
   }
 
   @media (min-width: 768px) {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 40px;
+    padding-right: 10px;
   }
 }
 
@@ -44,6 +47,7 @@
   background: $brand-primary;
   color: $gray-lighter;
   cursor: pointer;
+  font-family: $font-family-heading;
   font-size: 16px;
   font-weight: $font-weight-heading;
   line-height: 20px;
